[gd_scene load_steps=6 format=3 uid="uid://d2tlfqqqdul8u"]

[ext_resource type="Script" uid="uid://uvbqnxlw6xjp" path="res://Secnes/Battle/arena/arena.gd" id="1_e2ank"]
[ext_resource type="Texture2D" uid="uid://w3ukewq3w5ue" path="res://Sprites/pixel.png" id="2_g7li8"]
[ext_resource type="Texture2D" uid="uid://cybyfqypwcpi4" path="res://Sprites/mask.png" id="3_trhf5"]
[ext_resource type="Shape2D" uid="uid://bmwbm8crmq20" path="res://Sprites/pixel.tres" id="4_383mu"]
[ext_resource type="Script" uid="uid://cdwunuo86wc0y" path="res://Secnes/Battle/arena/arena_area.gd" id="5_yyo6s"]

[node name="Arena" type="Node2D"]
position = Vector2(320, 320)
script = ExtResource("1_e2ank")

[node name="Outer" type="Polygon2D" parent="."]
texture = ExtResource("2_g7li8")
texture_scale = Vector2(5, 5)
polygon = PackedVector2Array(320, 240, 320, 240, 320, 240, 320, 240)

[node name="Inner" type="Polygon2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = 1
texture = ExtResource("2_g7li8")
texture_scale = Vector2(5, 5)
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[node name="mask" type="PointLight2D" parent="."]
blend_mode = 2
texture = ExtResource("3_trhf5")

[node name="StaticBody" type="StaticBody2D" parent="."]

[node name="ShapeUp" type="CollisionShape2D" parent="StaticBody"]
shape = ExtResource("4_383mu")

[node name="ShapeDown" type="CollisionShape2D" parent="StaticBody"]
shape = ExtResource("4_383mu")

[node name="ShapeLeft" type="CollisionShape2D" parent="StaticBody"]
shape = ExtResource("4_383mu")

[node name="ShapeRight" type="CollisionShape2D" parent="StaticBody"]
shape = ExtResource("4_383mu")

[node name="StaticBody2" type="Area2D" parent="."]
z_index = 1
collision_layer = 0
collision_mask = 2

[node name="ShapeUp" type="CollisionShape2D" parent="StaticBody2"]
shape = ExtResource("4_383mu")
debug_color = Color(0.960784, 0, 0, 0.419608)

[node name="ShapeDown" type="CollisionShape2D" parent="StaticBody2"]
shape = ExtResource("4_383mu")
debug_color = Color(1, 0, 0, 0.419608)

[node name="ShapeLeft" type="CollisionShape2D" parent="StaticBody2"]
shape = ExtResource("4_383mu")
debug_color = Color(1, 0, 0, 0.419608)

[node name="ShapeRight" type="CollisionShape2D" parent="StaticBody2"]
shape = ExtResource("4_383mu")
debug_color = Color(1, 0, 0, 0.419608)

[node name="ArenaArea" type="Area2D" parent="."]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("5_yyo6s")

[node name="Shape" type="CollisionShape2D" parent="ArenaArea"]
shape = ExtResource("4_383mu")
debug_color = Color(0.551434, 0.400897, 1, 0.42)
